--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -147,16 +147,20 @@
         <tbody>
          <% feedback = @current_user.get_user_feedback(@week_range[:start_date], @week_range[:end_date]) %>
             <tr>
-            
-              <td>
-                <span class=<%= 'dot-green'%>></span>
+             <td id="-status" >
+                <span class="<%= 'dot red'%>" ></span>
               </td>
-              <td><%= feedback ? feedback.priority : "No feedback" %></td>
+              <td><%= feedback ? feedback.get_priority_word : "No feedback" %></td>
               <td><%= feedback ? feedback.participation_rating : "No feedback" %></td>
               <td><%= feedback ? feedback.effort_rating : "No feedback" %></td>
               <td><%= feedback ? feedback.punctuality_rating : "No feedback" %></td>
             </tr>
 
+              <%if @current_user.teams.first.feedbacks.size > 0%>
+                <td><%= link_to "View Historical Data", @current_user.teams.first %></td>
+              <% else %>
+                <td>Team Does Not Have Any Ratings!</td>
+              <%end%>
         </tbody>
       </table>
 
