fixed headers for home page by removing Avg. for each rating

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -137,9 +137,9 @@
           <tr>
             <th></th>
             <th>Urgency/Intervention Level</th>
-            <th>Avg. Participation Rating (Out of 5)</th>
-            <th>Avg. Effort Rating (Out of 5)</th>
-            <th>Avg. Punctuality Rating (Out of 5)</th>
+            <th>Participation Rating (Out of 5)</th>
+            <th>Effort Rating (Out of 5)</th>
+            <th>Punctuality Rating (Out of 5)</th>
             <th colspan="4"></th>
           </tr>
         </thead>
