fix(Comments): Removed ability to sort tables by comments

--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -9,7 +9,7 @@
       <th><%= sortable "effort_rating" %></th>
       <th><%= sortable "punctuality_rating" %></th>
       <th><%= sortable "priority" %></th>
-      <th><%= sortable "comments" %></th>
+      <th>Comments</th>
       <th><%= sortable "timestamp" %></th>
       <th colspan="7"></th>
     </tr>
