--- a/app/views/reports/_all_reports.html.erb
+++ b/app/views/reports/_all_reports.html.erb
@@ -13,8 +13,8 @@
   <tbody>
     <% Report.all.each do |report| %>
       <tr>
-        <td><%= User.find(report.reporter_id).name %></td>
-        <td><%= User.find(report.reportee_id).name %></td>
+        <td><%= User.find(report.reporter_id).first_name %></td>
+        <td><%= User.find(report.reportee_id).first_name %></td>
         <td><%= report.description %></td>
         <% if report.priority == 0 %>
           <td><%= 'High' %></td>
