--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -20,7 +20,7 @@
 <!--       List all students but current student as possible reportee -->
       <% students_except_self = get_students_except_self %>
       
-      <% reporteeOptions = options_from_collection_for_select(students_except_self, 'id', 'name') %>
+      <% reporteeOptions = options_from_collection_for_select(students_except_self, 'id', 'first_name', 'last_name') %>
       <%= form.label :reportee_id %>
       <%= form.select :reportee_id, reporteeOptions%>
   </div>
