--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,8 @@
   <thead>
     <tr>
       <th>Email</th>
-      <th>Name</th>
+      <th>First Name</th>
+      <th>Last Name</th>
       <th>Role</th>
       <th>Team</th>
       <th colspan="3"></th>
@@ -15,7 +16,8 @@
     <% @users.each do |user| %>
       <tr id=user<%= user.id %> >
         <td><%= user.email %></td>
-        <td><%= user.name %></td>
+        <td><%= user.first_name %></td>
+        <td><%= user.last_name %></td>
         <td><%= user.role %></td>
         <td><%= user.team_names.join(", ") %></td>
         <td><%= link_to 'Show', user %></td>
