fix(Feedback): Resolved bugs pertaining to updating feedback * Students can no longer view their old feedback (only current week) * Created a function to determine if a feedback is part of this week * Updated test cases to include priority * Moved require_access function to be private instead

--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -24,6 +24,11 @@
 </p>
 
 <p>
+  <strong>Priority Level:</strong>
+  <%= @feedback.get_priority_word %>
+</p>
+
+<p>
   <strong>Comments:</strong>
   <%= @feedback.comments %>
 </p>
