--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -13,7 +13,7 @@
     <% if flag == true %>
       <div class="field">
         Student Name:
-        <%= user.first_name %> <%= user.last_name %>
+        <%= user.full_name %>
       </div>
     <% end %>
   <div class="field">
