--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -1,6 +1,6 @@
 <p>
   <strong>User:</strong>
-  <%= @feedback.user.first_name %> <%= @feedback.user.last_name %>
+  <%= @feedback.user.full_name %>
 </p>
 
 <p>
