feat(Filter Feedbacks): Added fields for the filter form with appropriate options ('Filter' button does not work yet)

--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Feedbacks</h1>
+
+<%= render 'filter', path: feedbacks_path %>
+
 <p>You can find a history of all feedbacks submitted below.</p>
 <table>
   <thead>
