--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,8 +6,13 @@
 </p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @user.full_name %> 
+  <strong>First name:</strong>
+  <%= @user.first_name %> 
+</p>
+
+<p>
+  <strong>Last name:</strong>
+  <%= @user.last_name %> 
 </p>
 
 <p>
