add style for nav bar dropdown

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -149,6 +149,14 @@ li.dropdown {
   display: inline-block;
 }
 
+.dropdown-button {
+  display: block;
+  color: white !important;
+  text-align: center;
+  padding: 1em 1em 1em 1em; 
+  text-decoration: none;
+}
+
 .dropdown-content {
   width: auto;
   display: none;
