--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -18,7 +18,7 @@
   <tbody>
     <% @feedbacks.each do |feedback| %>
       <tr>
-        <td><%= feedback.user.name %></td>
+        <td><%= link_to feedback.user.name, feedback.user %></td>
         <td><%= feedback.team.team_name %></td>
         <td><%= feedback.participation_rating %></td>
         <td><%= feedback.effort_rating %></td>
