--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -10,7 +10,7 @@
 
 <p>
   <strong>Created By:</strong>
-  <%= @team.user.name %>
+  <%=link_to @team.user.name,  @team.user %>
 </p>
 
 
@@ -28,7 +28,7 @@
     <tbody>
       <% @team.users.each do |user| %>
         <tr>
-          <td><%= user.name %></td>
+          <td><%=link_to user.name,  user %></td>
           <% if current_user.is_admin %>
             <td><%= link_to 'Remove User From Team', team_confirm_delete_delete_user_from_team_path(user_id: user.id, team_id: @team.id) %></td>
           <% end %>
@@ -75,7 +75,8 @@
               <tbody>
                 <% period.each do |fb| %>
                   <tr>
-                    <td><%= fb.user.name %></td>
+                    <!--<td><%= fb.user.name %></td>-->
+                    <td><%=link_to fb.user.name,  fb.user %></td>
                     <td><%= fb.participation_rating %></td>
                     <td><%= fb.effort_rating %></td>
                     <td><%= fb.punctuality_rating %></td>
