--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
         <td><%= user.email %></td>
         <td><%= user.name %></td>
         <td><%= user.role %></td>
-        <td><%= user.team_names.join(", ") %></td>
+        <td><%= user.teams.empty? ? "" : (link_to user.teams.first.team_name, team_path(user.teams.first)) %></td>
         <td><%= link_to 'Show', user %></td>
         
         <td><%= link_to 'Delete User', user_confirm_delete_path(user) %></td>
