feat(Details): Removed 'Details' link from home and added team link to feedbacks#show

--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -5,7 +5,7 @@
 
 <p>
   <strong>Team:</strong>
-  <%= @feedback.team_id %>
+  <%= link_to @feedback.team.team_name, team_path(@feedback.team) %>
 </p>
 
 <p>
