Added links to missing feedback sections under the home page and manage teams show page.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -43,21 +43,10 @@
             <td><%= team.team_name %></td>
             <td><%= team.team_code %></td>
             <!-- <td><%= team.student_names.size == 0 ? 'No members' : team.student_names.join(", ") %></td> -->
-            
-            <% if team.student_names.size == 0 %>
-              <td> No members </td>
-            <% else %>
-            <td>
-              <% team.users.each_with_index do |user, i| %>
-              <% if i > 0 %>
-              ,
-              <% end %>
-              <%=link_to user.name,  user %>
-              <% end %>
-            </td>
-          <% end %>
-            
-            <td><%= @unsubmitted[:current_week][team.id].size == 0 ? '' : @unsubmitted[:current_week][team.id].join(", ") %></td>
+            <td><%= team.users.empty? ? 'No members' : team.users.map{ |user| link_to(user.name, user) }.join(", ").html_safe %></td>
+          
+            <!-- <td><%= @unsubmitted[:current_week][team.id].size == 0 ? '' : @unsubmitted[:current_week][team.id].join(", ") %></td> -->
+            <td><%= @unsubmitted[:current_week][team.id].size == 0 ? '' : @unsubmitted[:current_week][team.id].map{ |user| link_to(user.name, user) }.join(", ").html_safe %></td>
             <td><%= link_to "Details", team %></td>
           </tr>
         <% end %>
@@ -103,20 +92,9 @@
             <td><%= team.team_name %></td>
             <td><%= team.team_code %></td>
             <!-- <td><%= team.student_names.size == 0 ? 'No members' : team.student_names.join(", ") %></td> -->
-            <% if team.student_names.size == 0 %>
-              <td> No members </td>
-            <% else %>
-            <td>
-              <% team.users.each_with_index do |user, i| %>
-              <% if i > 0 %>
-              , 
-              <% end %>
-              <%= link_to user.name, user %>
-              <% end %>
-            </td>
-          <% end %>
-
-            <td><%= @unsubmitted[:previous_week][team.id].size == 0 ? '' : @unsubmitted[:previous_week][team.id].join(", ") %></td>
+            <td><%= team.users.empty? ? 'No members' : team.users.map{ |user| link_to(user.name, user) }.join(", ").html_safe %></td>
+            
+            <td><%= @unsubmitted[:previous_week][team.id].size == 0 ? '' : @unsubmitted[:previous_week][team.id].map{ |user| link_to(user.name, user) }.join(", ").html_safe %></td>
             
           </tr>
         <% end %>
