--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -21,18 +21,7 @@
           <td><%= team.team_code %></td>
           <td><%= team.user.name %></td>
           <!-- <td><%= team.student_names.join(", ") %></td> -->
-          <% if team.student_names.size == 0 %>
-              <td> No members </td>
-            <% else %>
-            <td>
-              <% team.users.each_with_index do |user, i| %>
-              <% if i > 0 %>
-              , 
-              <% end %>
-              <%= link_to user.name, user %>
-              <% end %>
-            </td>
-          <% end %>
+          <td><%= team.users.empty? ? 'No members' : team.users.map{ |user| link_to(user.name, user) }.join(", ").html_safe %></td>
 
 
           <td><%= link_to 'Show', team %></td>
