--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -54,9 +54,7 @@
   <br>
   <div class="small-line"></div>
   <h2>Previous Week: <%= (@week_range[:start_date] - 7.days).strftime('%b %e, %Y')%> to <%= (@week_range[:end_date] - 7.days).strftime('%b %e, %Y')%></h2>
-  </br>
-  <a href="/download.csv">Export CSV</a>
-  </br>
+  <p><%= link_to 'Export CSV', '/download.csv', class: "btn" %></p>
   <% if @teams.size == 0 %>
     <p>No teams yet!</p>
   <% else %>
