--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -66,13 +66,17 @@
 
   <div class="help-div">
     <h2> Feedback & Ratings Filter </h2>
-    <p>There are 7 filter options:
+    <p>There are 8 filter options:
       <ul>
-        <li><b>Student Name</b> - Filters for all names that begin with your search input</li>
+        <li><b>First Name</b> - Filters for all first names that begin with your search input</li>
           <ul>
-            <li>Type in the name of the student</li>
+            <li>Type in the first name of the student</li>
             <li>Case-insensitive</li>
             <li>For example, if you searched "Ben", it will return any name beginning with "Ben" such as "Ben", "Benjamin" and "Benji"</li>
+          </ul>
+        <li><b>Last Name</b> - Filters for all last names that begin with your search input</li>
+          <ul>
+            <li>Works in the same way as 'First name'</li>
           </ul>
         <li><b>Team Name</b> - Filters for selected team</li>
           <ul>
