--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -98,6 +98,9 @@
       Click the filter button to apply the filters. Click the clear button to clear the selected filters.
     </p>
     <p>
+      After filters are applied, they will show underneath. Click the reset button to clear the applied filters.
+    </p>
+    <p>
       You may select from any number of filter options. If any options are left blank, they are ignored.
     </p>
   </div>
