fix for multiline bug

--- a/app/views/static_pages/download.csv.erb
+++ b/app/views/static_pages/download.csv.erb
@@ -5,6 +5,6 @@
 <%- @missing.each do |f| -%>
     <%- f[1].each do |user_data| -%>
         <%- row = [user_data.full_name, user_data.email, user_data.teams.first.team_name, @start_date, @end_date] %>
-         <%= CSV.generate_line(row).html_safe.strip -%>
+         <%= CSV.generate_line(row).html_safe.strip %>
     <%- end -%>
 <%- end -%>
