--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
   <div class="line"></div>
   <h2>Team Summary View</h2>
   <h2>Current Week: <%= @week_range[:start_date].strftime('%b %e, %Y')%> to <%= @week_range[:end_date].strftime('%b %e, %Y')%></h2>
-
+  <p><%= link_to 'Export Current Missing Feedback', '/download_current.csv', class: "btn" %></p>
   <% if @teams.size == 0 %>
     <p>No teams yet!</p>
   <% else %>
@@ -53,7 +53,7 @@
   <br>
   <div class="small-line"></div>
   <h2>Previous Week: <%= (@week_range[:start_date] - 7.days).strftime('%b %e, %Y')%> to <%= (@week_range[:end_date] - 7.days).strftime('%b %e, %Y')%></h2>
-  <p><%= link_to 'Export Missing Feedback', '/download.csv', class: "btn" %></p>
+  <p><%= link_to 'Export Previous Missing Feedback', '/download_previous.csv', class: "btn" %></p>
   <% if @teams.size == 0 %>
     <p>No teams yet!</p>
   <% else %>
