--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -37,7 +37,7 @@
 
 <p>
   <strong>Timestamp:</strong>
-  <%= @feedback.timestamp %>
+  <%= @feedback.timestamp.strftime('%Y/%m/%d %H:%M') %>
 </p>
 
 <%= link_to 'Edit', edit_feedback_path(@feedback) %> |
