--- a/app/views/static_pages/download_previous.csv.erb
+++ b/app/views/static_pages/download_previous.csv.erb
@@ -1,9 +1,10 @@
 <%- headers = ['Name:', 'Email:', 'Team id:', 'Start Date:', 'End Date:'] -%>
 
-<%= CSV.generate_line headers %>
+<%= CSV.generate_line(headers).strip -%>
 
 <%- @missing.each do |f| -%>
     <%- f[1].each do |user_data| -%>
-         <%= CSV.generate_line([user_data.full_name, user_data.email, user_data.teams.first.team_name, @start_date, @end_date]) -%>
+        <%- row = [user_data.full_name, user_data.email, user_data.teams.first.team_name, @start_date, @end_date] %>
+         <%= CSV.generate_line(row).html_safe.strip %>
     <%- end -%>
 <%- end -%>
