This change has removed the 'Team' word from the professor's profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,8 +22,10 @@
 
 
 <p>
-  <strong>Team:</strong>
-  <%= @user.teams.empty? ? "" : (link_to @user.teams.first.team_name, team_path(@user.teams.first)) %>
+<% if @user.role != 'Professor'%>
+ <strong>Team:</strong>
+ <%= @user.teams.empty? ? "" : (link_to @user.teams.first.team_name, team_path(@user.teams.first)) %> 
+ <%end%>
 </p>
 
 <%= link_to 'Back', :back %>
