--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -91,7 +91,7 @@
                     <%else%>
                       <td><%= fb.comments %></td>
                     <%end%>
-                    <td><%= fb.timestamp.strftime('%Y-%m-%d %H:%M EST') %></td>
+                    <td><%= fb.display_timestamp %></td>
                   </tr>
                 <% end %>
               </tbody>
