--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,10 +22,10 @@
 
 
 <p>
-<% if @user.role != 'Professor'%>
- <strong>Team:</strong>
- <%= @user.teams.empty? ? "" : (link_to @user.teams.first.team_name, team_path(@user.teams.first)) %> 
- <%end%>
+  <% if !@user.teams.empty? %>
+    <strong>Team:</strong>
+    <%= link_to @user.teams.first.team_name, team_path(@user.teams.first) %> 
+  <% end %>
 </p>
 
 <%= link_to 'Back', :back %>
