add red highlight box around error fields

--- a/app/views/static_pages/show_reset_password.html.erb
+++ b/app/views/static_pages/show_reset_password.html.erb
@@ -1,10 +1,29 @@
 </br>
 
 <%= form_with(local: true, url: reset_password_url, method: :post) do |form| %>
+
+  <% if !flash[:error].nil? %>
+    <% if flash[:error].include? 'existing' %>
+      <div class="field_with_errors">
+    <% end %>
+  <% end %>
+
   <div class="field">
     <%= form.label "Existing Password" %>
     <%= form.password_field :existing_password %>
   </div>
+
+  <% if !flash[:error].nil? %>
+    <% if flash[:error].include? 'existing' %>
+      </div>
+    <% end %>
+  <% end %>
+
+  <% if !flash[:error].nil? %>
+    <% if flash[:error].include? 'specifications' %>
+      <div class="field_with_errors">
+    <% end %>
+  <% end %>
 
   <div class="field">
     <%= form.label 'New Password' %>
@@ -15,6 +34,12 @@
     <%= form.label 'New Password Confirmation' %>
     <%= form.password_field :password_confirmation %>
   </div>
+
+  <% if !flash[:error].nil? %>
+    <% if flash[:error].include? 'specifications' %>
+      </div>
+    <% end %>
+  <% end %>
 
   <div class="actions">
     <%= form.submit "Submit" %>
