--- a/app/views/static_pages/show_reset_password.html.erb
+++ b/app/views/static_pages/show_reset_password.html.erb
@@ -1,45 +1,70 @@
 </br>
 
 <%= form_with(local: true, url: reset_password_url, method: :post) do |form| %>
-
   <% if !flash[:error].nil? %>
-    <% if flash[:error].include? 'existing' %>
-      <div class="field_with_errors">
-    <% end %>
+    <!-- existing password error -->
+    <% existing_error = flash[:error].include? 'existing' %>
+
+    <!-- new password error -->
+    <% new_error = flash[:error].include? 'specifications'%>
   <% end %>
 
   <div class="field">
+    <% if existing_error %>
+        <div class="field_with_errors">
+    <% end %>
+
     <%= form.label "Existing Password" %>
+
+    <% if existing_error %>
+        </div>
+        <div class="field_with_errors">
+    <% end %>
+
     <%= form.password_field :existing_password %>
+
+    <% if existing_error %>
+        </div>
+    <% end %>
   </div>
 
-  <% if !flash[:error].nil? %>
-    <% if flash[:error].include? 'existing' %>
-      </div>
-    <% end %>
-  <% end %>
-
-  <% if !flash[:error].nil? %>
-    <% if flash[:error].include? 'specifications' %>
-      <div class="field_with_errors">
-    <% end %>
-  <% end %>
-
   <div class="field">
+    <% if new_error %>
+        <div class="field_with_errors">
+    <% end %>
+
     <%= form.label 'New Password' %>
+
+    <% if new_error %>
+        </div>
+        <div class="field_with_errors">
+    <% end %>
+
     <%= form.password_field :password %>
+
+    <% if new_error %>
+        </div>
+    <% end %>
   </div>
 
   <div class="field">
-    <%= form.label 'New Password Confirmation' %>
-    <%= form.password_field :password_confirmation %>
-  </div>
-
-  <% if !flash[:error].nil? %>
-    <% if flash[:error].include? 'specifications' %>
-      </div>
+    <% if new_error %>
+        <div class="field_with_errors">
     <% end %>
-  <% end %>
+
+    <%= form.label 'New Password Confirmation' %>
+
+    <% if new_error %>
+        </div>
+        <div class="field_with_errors">
+    <% end %>
+
+    <%= form.password_field :password_confirmation %>
+
+    <% if new_error %>
+        </div>
+    <% end %>
+  </div>
 
   <div class="actions">
     <%= form.submit "Submit" %>
