--- a/app/views/static_pages/show_reset_password.html.erb
+++ b/app/views/static_pages/show_reset_password.html.erb
@@ -3,65 +3,65 @@
 <%= form_with(local: true, url: reset_password_url, method: :post) do |form| %>
   <% if !flash[:error].nil? %>
     <!-- existing password error -->
-    <% existing_error = flash[:error].include? 'existing' %>
+    <% is_existing_error = flash[:error].include? 'existing' %>
 
     <!-- new password error -->
-    <% new_error = flash[:error].include? 'specifications'%>
+    <% is_new_error = flash[:error].include? 'specifications'%>
   <% end %>
 
   <div class="field">
-    <% if existing_error %>
+    <% if is_existing_error %>
         <div class="field_with_errors">
     <% end %>
 
     <%= form.label "Existing Password" %>
 
-    <% if existing_error %>
+    <% if is_existing_error %>
         </div>
         <div class="field_with_errors">
     <% end %>
 
     <%= form.password_field :existing_password %>
 
-    <% if existing_error %>
+    <% if is_existing_error %>
         </div>
     <% end %>
   </div>
 
   <div class="field">
-    <% if new_error %>
+    <% if is_new_error %>
         <div class="field_with_errors">
     <% end %>
 
     <%= form.label 'New Password' %>
 
-    <% if new_error %>
+    <% if is_new_error %>
         </div>
         <div class="field_with_errors">
     <% end %>
 
     <%= form.password_field :password %>
 
-    <% if new_error %>
+    <% if is_new_error %>
         </div>
     <% end %>
   </div>
 
   <div class="field">
-    <% if new_error %>
+    <% if is_new_error %>
         <div class="field_with_errors">
     <% end %>
 
     <%= form.label 'New Password Confirmation' %>
 
-    <% if new_error %>
+    <% if is_new_error %>
         </div>
         <div class="field_with_errors">
     <% end %>
 
     <%= form.password_field :password_confirmation %>
 
-    <% if new_error %>
+    <% if is_new_error %>
         </div>
     <% end %>
   </div>
