clean up reset password form

--- a/app/views/static_pages/show_reset_password.html.erb
+++ b/app/views/static_pages/show_reset_password.html.erb
@@ -10,60 +10,30 @@
   <% end %>
 
   <div class="field">
-    <% if is_existing_error %>
-        <div class="field_with_errors">
-    <% end %>
-
-    <%= form.label "Existing Password" %>
-
-    <% if is_existing_error %>
-        </div>
-        <div class="field_with_errors">
-    <% end %>
-
-    <%= form.password_field :existing_password %>
-
-    <% if is_existing_error %>
-        </div>
-    <% end %>
+    <div class=<%= is_existing_error ? "field_with_errors" : "" %>>
+      <%= form.label "Existing Password" %>
+    </div>
+    <div class=<%= is_existing_error ? "field_with_errors" : "" %>>
+      <%= form.password_field :existing_password %>
+    </div>
   </div>
 
   <div class="field">
-    <% if is_new_error %>
-        <div class="field_with_errors">
-    <% end %>
-
-    <%= form.label 'New Password' %>
-
-    <% if is_new_error %>
-        </div>
-        <div class="field_with_errors">
-    <% end %>
-
-    <%= form.password_field :password %>
-
-    <% if is_new_error %>
-        </div>
-    <% end %>
+    <div class=<%= is_new_error ? "field_with_errors" : "" %>>
+      <%= form.label 'New Password' %>
+    </div>
+    <div class=<%= is_new_error ? "field_with_errors" : "" %>>
+      <%= form.password_field :password %>
+    </div>
   </div>
 
   <div class="field">
-    <% if is_new_error %>
-        <div class="field_with_errors">
-    <% end %>
-
-    <%= form.label 'New Password Confirmation' %>
-
-    <% if is_new_error %>
-        </div>
-        <div class="field_with_errors">
-    <% end %>
-
-    <%= form.password_field :password_confirmation %>
-
-    <% if is_new_error %>
-        </div>
-    <% end %>
+    <div class=<%= is_new_error ? "field_with_errors" : "" %>>
+      <%= form.label 'New Password Confirmation' %>
+    </div>
+    <div class=<%= is_new_error ? "field_with_errors" : "" %>>
+      <%= form.password_field :password_confirmation %>
+    </div>
   </div>
 
   <div class="actions">
